style.css
/* Base Styles */
html {
  font-size: 16px;
}

body {
  background-color: black;
  color: white;
}

h1 {
  animation: displayTitle 2s linear 1;
  font-size: 3rem;
}

@keyframes displayTitle {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

h2 {
  font-size: 2.25rem;
}

a {
  color: inherit;
  text-decoration: none;
}

/* Fixed navigation */
nav {
  align-items: flex-end;
  animation: navDisplay 10s linear 1;
  flex-flow: column nowrap;
  padding: 15px;
  position: fixed;
  right: 0;
  text-align: right;
  top: 0;
  z-index: 100;
}

@keyframes navDisplay {
  0% { opacity: 0; }
  75% { opacity: 0; }
  100% { opacity: 1; }
}

/* Hidden navigation menu */
nav ul {
  align-items: center;
  background-color: black;
  display: inline-block;
  flex-flow: column nowrap;
  margin: 0;
  opacity: 0;
  padding: 0;
  visibility: hidden;
}

nav ul li {
  padding: 5px;
}

/* Display hidden navigation menu on hover */

nav ul:hover,
.nav-icon:hover ~ ul,
.nav-icon:focus ~ ul {
  height: auto;
  opacity: 1;
  transition: all 2s linear;
  visibility: visible;
}

.flex {
  display: flex;
}

/* Home Page */

.bg-slideshow::after {
  background-color: rgba(0, 0, 0, 0.6);
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.bg-slideshow li {
  animation: imageAnimation 10s linear infinite;
  background: url('resources/images/bakery-interior.png') center/cover;
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.bg-slideshow li:nth-child(2) {
  animation-delay: 5s;
  background-image: url('resources/images/bakery-people.jpg');
}

@keyframes imageAnimation {
  0% { opacity: 0; }
  25% { opacity: 1; }
  50% { opacity: 1; }
  90% { opacity: 0; }
  100% { opacity: 0; }
}

#page1 {
  align-items: center;
  flex-flow: column;
  height: 100vh;
  justify-content: center;
  text-align: center;
  width: 100%;
}

#down-arrow {
  animation: scrollArrow 3s linear 10;
  animation-delay: 4s;
  opacity: 0;
  position: relative;
  top: 25%;
}

@keyframes scrollArrow {
  0% { opacity: 0; }
  50% { opacity: 1; }
  75% {
    opacity: 0.5;
    top: 30%;
  }
  100% {
    opacity: 0;
    top: 30%;
  }
}

/* Menu Page */

.menu-item {
  align-items: center;
  flex-flow: column nowrap;
  margin: 15px 0;
  position: relative;
  text-align: center;
}

.menu-item span,
.menu-item p {
  background-color: black;
  left: 0;
  margin: 0;
  opacity: 0;
  padding: 5px;
  position: absolute;
  right: 0;
  transition: all 1s;
  visibility: collapse;
}

.menu-item span {
  bottom: 67%;
  top: 0;
}

.menu-item p {
  bottom: 0;
  top: 33%;
}

.menu-item:hover :not(img),
.menu-item:focus :not(img) {
  opacity: 0.6;
  visibility: visible;
}

#page2 {
  align-items: center;
  flex-flow: column nowrap;
  padding: 0 16%;
}

#page2 img {
  height: 137px;
  width: 215px;
}

/* Photos Section */
.carousel-image {
  display: inline-block;
  left: 0;
  position: absolute;
  top: 0;
}

.carousel-wrapper {
  height: 215px;
  list-style: none;
  margin: auto;
  overflow: hidden;
  padding: 0;
  position: relative;
  white-space: nowrap;
  width: 250px;
}

#photos {
  padding: 5% 10%;
  text-align: center;
}

#photos img {
  height: 215px;
  width: 250px;
}

/* About Us Page */

#page3 {
  background:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url('resources/images/bakery-exterior.jpg') top left/cover;
  flex-flow: column nowrap;
  height: 100vh;
  justify-content: center;
  text-align: center;
  width: 100%;
}

#page3 h3,
#page3 p {
  margin: 5%;
}

/* Contact Page */

#page4 {
  flex-flow: column;
  padding-bottom: 25px;
  text-align: center;
}

#page4 iframe {
  display: none;
}

/* Footer */
footer {
  text-align: center;
}

footer a:nth-child(2) {
  margin-right: 15px;
}

#copyright {
  display: block;
  margin-top: 15px;
}

/* Media Queries */

@media only screen and (min-width: 720px) {
  /* Menu Section */
  #page2 {
    flex-flow: row wrap;
    justify-content: space-between;
  }

  #page2 h2,
  #page4 h2 {
    text-align: center;
    width: 100%;
  }

  /* Contact Section */
  #page4 {
    align-items: center;
    flex-flow: row wrap;
    justify-content: space-around;
  }

  #page4 address {
    text-align: left;
  }

  #page4 iframe {
    display: block;
    height: 300px;
    width: 300px;
  }
}

@media only screen and (min-width: 900px) {
  /* Menu Page */
  .menu-item,
  .menu-item span,
  .menu-item p {
    opacity: initial;
    pointer-events: none;
    position: initial;
    visibility: initial;
  }

  .menu-item {
    margin: 15px;
    width: 215px;
  }

  #page2 {
    justify-content: center;
    margin: 5% 10%;
    padding: 0;
  }

  /* About Us Page */
  #page3 h3,
  #page3 p {
    margin: 1% 10%;
  }

  /* Contact Page */
  #page4 iframe {
    height: 400px;
    width: 400px;
  }
}

